# kis-folio

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  PRD_folio_v1.0.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: code-review.md  open-source-readiness.md  production.md
scripts/: secret_audit.py
src/folio/: __init__.py  advisor.py  agentic.py  analyzer.py  cli.py  config.py  db.py  diagnostics.py  kis.py  logging_utils.py  mock_data.py  models.py  report_service.py  reporting.py  security.py  terminal.py  tui.py  visuals.py
src/folio/prompts/: __init__.py  advisor.md  report_system.md
src/folio/prompts/agents/: allocation_analyst.md  bear_researcher.md  bear_researcher_rebuttal.md  bull_researcher.md  bull_researcher_rebuttal.md  liquidity_planner.md  macro_exposure_analyst.md  market_momentum_analyst.md  portfolio_manager.md  risk_manager.md  risk_manager_final_review.md
tests/: test_advisor.py  test_analyzer.py  test_db.py  test_diagnostics.py  test_kis.py  test_report_service.py  test_reporting.py  test_security_static.py  test_terminal.py
