[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "folio"
version = "0.1.0"
description = "Local KIS domestic-stock portfolio analysis advisor"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.89; python_version >= '3.9'",
]

[project.optional-dependencies]
agent = [
    "langgraph>=1.0; python_version >= '3.10'",
]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
folio = "folio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
folio = ["prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
