[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "kis-folio"
version = "0.1.0"
description = "Unofficial local-first KIS OpenAPI portfolio analysis advisor"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{name = "hjongc"}]
keywords = ["kis", "portfolio", "langgraph", "openai-compatible", "investment-analysis"]
dependencies = [
    "langgraph>=1.0",
    "textual>=0.89",
]

[project.urls]
Homepage = "https://github.com/hjongc/kis-folio"
Repository = "https://github.com/hjongc/kis-folio"
Issues = "https://github.com/hjongc/kis-folio/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[project.scripts]
folio = "folio.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
folio = ["prompts/*.md"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
